--- a/前端/SubmitTime.html
+++ b/前端/SubmitTime.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="css/TimeAndUser.css" media="screen" type="text/css" />
-		
+		<link rel="stylesheet" href="css/SubmitTime.css" type="text/css" />
 		<script type="text/javascript">
 			function add(){
 				var table1=document.getElementById("mytable").insertRow(1);
@@ -11,7 +11,7 @@
 				var addRow2=table1.insertCell(1);
 				addRow2.innerHTML='<input id="id1" type="text" value="输入修改人" style="border-style:none"/>';
 				var addRow1=table1.insertCell(2);
-				addRow1.innerHTML='<input type="button" value="删除" onclick="del(this)"/> <input type="button" value="确定" onclick="sure(this)"/> <input type="button" value="修改" onclick="change(this)"/>';
+				addRow1.innerHTML='<input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/>';
 			}
 			
 			function del(tt){
@@ -48,16 +48,16 @@
 			<div></div>
 			<span>上报时限管理</span>
 		</div>
-		<table width="100%" id="mytable" border="1" cellpadding="10" id="time" style="table-layout:fixed">
+		<table width="100%" id="mytable" border="1" cellpadding="10" style="table-layout:fixed">
 			<tr>
-				<td>调查期</td>
-				<td>修改人</td>
-				<td>操作</td>
+				<th>调查期</th>
+				<th>修改人</th>
+				<th>操作</th>
 			</tr>
-			<tr><td>1月到2月</td><td>省用户</td><td><input type="button" value="删除" onclick="del(this)"/> <input type="button" value="确定" onclick="sure(this)"/> <input type="button" value="修改" onclick="change(this)"/></td></tr>
-			<tr><td>2月到3月</td><td>省用户</td><td><input type="button" value="删除" onclick="del(this)"/> <input type="button" value="确定" onclick="sure(this)"/> <input type="button" value="修改" onclick="change(this)"/></td></tr>
-			<tr><td>3月到4月</td><td>省用户</td><td><input type="button" value="删除" onclick="del(this)"/> <input type="button" value="确定" onclick="sure(this)"/> <input type="button" value="修改" onclick="change(this)"/></td></tr>
-			<tr><td colspan="3" align="center"><input type="button" value="增加订单" onclick="add()"></td></tr>
+			<tr><td>1月到2月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+			<tr><td>2月到3月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+			<tr><td>3月到4月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+			<tr><td colspan="3" align="center"><input id="buttonStyle" type="button" value="增加订单" onclick="add()"></td></tr>
 		</table>
 	</body>
 </html>
