--- a/前端/UserManage.html
+++ b/前端/UserManage.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="css/TimeAndUser.css" media="screen" type="text/css" />
-		
+		<link rel="stylesheet" href="css/UserManage.css" type="text/css"/>
 		<script type="text/javascript">
 			function add(){
 				var table1=document.getElementById("mytable").insertRow(1);
@@ -13,7 +13,7 @@
 				var addRow3=table1.insertCell(2);
 				addRow3.innerHTML='<input id="id3" type="text" value="输入用户密码" style="border-style:none"/>';
 				var addRow1=table1.insertCell(3);
-				addRow1.innerHTML='<input type="button" value="删除" onclick="del(this)"/> <input type="button" value="确定" onclick="sure(this)"/> <input type="button" value="修改" onclick="change(this)"/>';
+				addRow1.innerHTML='<input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/>';
 			}
 	
 			function del(tt){
@@ -63,17 +63,17 @@
 			<span>用户信息管理</span>
 		</div>
 		<form name="input" action="" method="post">
-			<table width="100%" id="mytable" border="1" cellpadding="10" id="time" style="table-layout:fixed">
+			<table width="100%" id="mytable" border="1" cellpadding="10" style="table-layout:fixed">
 				<tr>
-					<td>用户名</td>
-					<td>用户类型</td>
-					<td>用户密码</td>
-					<td>操作</td>
+					<th>用户名</th>
+					<th>用户类型</th>
+					<th>用户密码</th>
+					<th>操作</th>
 				</tr>
-				<tr><td>ZTL</td><td>省用户</td><td>123456</td><td><input type="button" value="删除" onclick="del(this)"/> <input type="button" value="确定" onclick="sure(this)"/> <input type="button" value="修改" onclick="change(this)"/></td></tr>
-				<tr><td>XMZ</td><td>企业用户</td><td>123456</td><td><input type="button" value="删除" onclick="del(this)"/> <input type="button" value="确定" onclick="sure(this)"/> <input type="button" value="修改" onclick="change(this)"/></td></tr>
-				<tr><td>TZJ</td><td>企业用户</td><td>123456</td><td><input type="button" value="删除" onclick="del(this)"/> <input type="button" value="确定" onclick="sure(this)"/> <input type="button" value="修改" onclick="change(this)"/></td></tr>
-				<tr><td colspan="4" align="center"><input type="button" value="增加用户" onclick="add()"></td></tr>
+				<tr><td>ZTL</td><td>省用户</td><td>123456</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+				<tr><td>XMZ</td><td>企业用户</td><td>123456</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+				<tr><td>TZJ</td><td>企业用户</td><td>123456</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+				<tr><td colspan="4" align="center"><input id="buttonStyle" type="button" value="增加用户" onclick="add()"/></td></tr>
 			</table>
 		</form>
 	</body>
