--- a/前端/SubmitTime.html
+++ b/前端/SubmitTime.html
@@ -57,7 +57,7 @@
 			<tr><td>1月到2月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
 			<tr><td>2月到3月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
 			<tr><td>3月到4月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
-			<tr><td colspan="3" align="center"><input id="buttonStyle" type="button" value="增加订单" onclick="add()"></td></tr>
+			<tr><td colspan="3" align="center"><input id="buttonStyle" type="button" value="增加调查期" onclick="add()"></td></tr>
 		</table>
 	</body>
 </html>
