--- a/前端/inform.html
+++ b/前端/inform.html
@@ -18,9 +18,7 @@
 		</div>
 		
 		<div class="type">
-			<span>通知类型</span>
-			<a class="typea" href="#">省通知</a>
-			<a class="typea" href="#">企业通知</a>
+			<span>当前通知</span>
 		</div>
 		
 		<div class="title">
