--- a/前端/SubmitTime.html
+++ b/前端/SubmitTime.html
@@ -48,16 +48,18 @@
 			<div></div>
 			<span>上报时限管理</span>
 		</div>
-		<table width="100%" id="mytable" border="1" cellpadding="10" style="table-layout:fixed">
-			<tr>
-				<th>调查期</th>
-				<th>修改人</th>
-				<th>操作</th>
-			</tr>
-			<tr><td>1月到2月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
-			<tr><td>2月到3月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
-			<tr><td>3月到4月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
-			<tr><td colspan="3" align="center"><input id="buttonStyle" type="button" value="增加调查期" onclick="add()"></td></tr>
-		</table>
+		<form name="input" action="" method="post">
+			<table width="100%" id="mytable" border="1" cellpadding="10" style="table-layout:fixed">
+				<tr>
+					<th>调查期</th>
+					<th>修改人</th>
+					<th>操作</th>
+				</tr>
+				<tr><td>1月到2月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+				<tr><td>2月到3月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+				<tr><td>3月到4月</td><td>省用户</td><td><input id="buttonStyle" type="button" value="删除" onclick="del(this)"/> <input id="buttonStyle" type="button" value="确定" onclick="sure(this)"/> <input id="buttonStyle" type="button" value="修改" onclick="change(this)"/></td></tr>
+				<tr><td colspan="3" align="center"><input id="buttonStyle" type="button" value="增加调查期" onclick="add()"></td></tr>
+			</table>
+		</form>
 	</body>
 </html>
