--- a/前端/compare.html
+++ b/前端/compare.html
@@ -25,7 +25,7 @@
 					x: -20
 				},
 				xAxis: {
-					categories: ["一月", "二月", "三月", "四月", "五月", "六月","七月", "八月", "九月", "十月", "十一月", "十二月"]
+					categories: ["一月", "二月"]
 				},
 				yAxis: {
 					title: {
@@ -48,19 +48,19 @@
 				},
 				series: [{
 					name: "企业总数",
-					data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+					data: [7.0, 6.9]
 				}, {
 					name: "建档期总岗位数",
-					data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
+					data: [-0.2, 0.8]
 				}, {
 					name: "调查期总岗位数",
-					data: [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0]
+					data: [-0.9, 0.6]
 				}, {
 					name: "岗位变化总数",
-					data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+					data: [3.9, 4.2]
 				}, {
 					name: "岗位减少总数",
-					data: [20, 21, 30, 15, 16, 18, 25, 22, 31, 32, 35, 36]
+					data: [20, 21]
 				}]
 			});
 		} );
@@ -132,11 +132,11 @@
 	<script>
 		function choose(sel){
 			if(sel.value=="1"){
-				document.getElementById("picture").style.display="block";
+				document.getElementById("pictureAndtable").style.display="block";
 				document.getElementById("hist").style.display="none";
 			}
 			else if(sel.value=="2"){
-				document.getElementById("picture").style.display="none";
+				document.getElementById("pictureAndtable").style.display="none";
 				document.getElementById("hist").style.display="block";
 			}
 		}
@@ -156,13 +156,65 @@
 			<span style="width:80%;">调查期企业岗位变动情况</span>
 			<span>
 				<select id="chose" onchange="choose(this);">
-					<option value="1">折线图显示</option>
+					<option value="1">折线图与表格显示</option>
 					<option value="2">柱状图显示</option>
 				</select>
 			</span>
 		</div>
 		
-		<div id="picture" style="width:100%;height:400px;display:block"></div>
+		<div class="title">
+			<span style="width: 8%;">输入调查期</span>
+			<span style="width: 16%;">
+				<input type="text" id="survey1"></input>
+			</span>
+			<span style="width: 1%;">和</span>
+			<span style="width:16%;">
+				<input type="text" id="survey2"></input>
+			</span>
+			<span>
+				<input type="submit" id="ensure" value="确定"></input>
+			</span>
+		</div>
+
+		<div id="pictureAndtable" style="display: block;">
+			<div id="picture" style="width:45%;height:380px;"></div>
+			<div id="table" style="width:45%;height: 400px;">
+				<form name="information" action="" method="post">
+					<table id="mytable" border="1" style="table-layout:fixed">
+						<tr>
+							<th>比较项目</th>
+							<th>一月</th>
+							<th>二月</th>
+						</tr>
+						<tr>
+							<th>企业总数</th>
+							<td>&nbsp;</td>
+							<td>&nbsp;</td>
+						</tr>
+						<tr>
+							<th>建档期总岗位数</th>
+							<td>&nbsp;</td>
+							<td>&nbsp;</td>
+						</tr>
+						<tr>
+							<th>调查期总岗位数</th>
+							<td>&nbsp;</td>
+							<td>&nbsp;</td>
+						</tr>
+						<tr>
+							<th>岗位变化总数</th>
+							<td>&nbsp;</td>
+							<td>&nbsp;</td>
+						</tr>
+						<tr>
+							<th>岗位较少总数</th>
+							<td>&nbsp;</td>
+							<td>&nbsp;</td>
+						</tr>
+					</table>
+				</form>
+			</div>	
+		</div>
 		<div id="hist" style="width:100%;height:400px;display:none"></div>
 		
 	</div>
