--- a/前端/index.html
+++ b/前端/index.html
@@ -3,12 +3,12 @@
 <head>
 	<title>山东省人力资源市场数据采集系统</title>
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="sub/css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<script src="js/loadFun.js" type="text/javascript"></script>
-	<script src="js/Show.js" type="text/javascript"></script>
-	<script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
+	<script src="sub/js/loadFun.js" type="text/javascript"></script>
+	<script src="sub/js/Show.js" type="text/javascript"></script>
+	<script src="sub/js/jquery-2.0.0.min.js" type="text/javascript"></script>
 	<script>
 	function resize(){
 		$("#mainbody").width(window.innerWidth - $("#menu").width() - 22);
@@ -41,20 +41,20 @@
 			<li id="l0">
 				<div class="link" onclick="change(0)"><i class="fa fa-university"></i>企业信息<i class="fa fa-chevron-down"></i></div>
 				<ul class="submenu" id="u0">
-					<li><a href="detail.html" target="inform">完善企业信息</a></li>
+					<li><a href="sub/detail.html" target="inform">完善企业信息</a></li>
 				</ul>
 			</li>
 			<li id="l1">
 				<div class="link" onclick="change(1)"><i class="fa fa-table"></i>人力资源表格<i class="fa fa-chevron-down"></i></div>
 				<ul class="submenu" id="u1">
-					<li><a href="survey.html" target="inform">填写调查期表格</a></li>
-					<li><a href="CheckSurvey.html" target="inform">已提交的调查期信息</a></li>
+					<li><a href="sub/survey.html" target="inform">填写调查期表格</a></li>
+					<li><a href="sub/CheckSurvey.html" target="inform">已提交的调查期信息</a></li>
 				</ul>
 			</li>
 			<li id="l2">
 				<div class="link" onclick="change(2)"><i class="fa fa-bell-o"></i>通知管理<i class="fa fa-chevron-down"></i></div>
 				<ul class="submenu" id="u2">
-				<li><a href="inform.html" target="inform">查看通知</a></li>
+				<li><a href="sub/inform.html" target="inform">查看通知</a></li>
 				</ul>
 			</li>
 		</ul>
@@ -63,7 +63,7 @@
 </div>
 
 <div id="mainbody">
-	<iframe id="main" src="cover.html" width="100%" height="100%" frameborder="0" name="inform" align="right"></iframe>
+	<iframe id="main" src="sub/cover.html" width="100%" height="100%" frameborder="0" name="inform" align="right"></iframe>
 </div>
 
 <!--
