--- a/前端/login.html
+++ b/前端/login.html
@@ -3,8 +3,8 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet"  type="text/css" href="css/login.css" />
-<script language="javascript"  charset="utf-8" src="js/jquery-2.0.0.min.js"></script>
+<link rel="stylesheet"  type="text/css" href="sub/css/login.css" />
+<script language="javascript"  charset="utf-8" src="sub/js/jquery-2.0.0.min.js"></script>
 <title>山东省人力资源市场数据采集系统</title>
 <style type="text/css">
 	.selected{
