--- a/前端/province.html
+++ b/前端/province.html
@@ -7,10 +7,10 @@
 	<title>山东省人力资源市场数据采集系统</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/province.css" media="screen" type="text/css" />
-	<script src="js/loadFun.js" type="text/javascript"></script>
-	<script src="js/Show.js" type="text/javascript"></script>
-	<script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="sub/css/province.css" media="screen" type="text/css" />
+	<script src="sub/js/loadFun.js" type="text/javascript"></script>
+	<script src="sub/js/Show.js" type="text/javascript"></script>
+	<script src="sub/js/jquery-2.0.0.min.js" type="text/javascript"></script>
 	<script>
 		function resize(){
 			$("#mainbody").width(window.innerWidth - $("#menu").width() - 22);
@@ -41,38 +41,38 @@
 				<li id="l0">
 					<div class="link" onclick="change(0)"><i class="fa fa-university"></i>企业管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u0">
-					<li><a href="CompanyReference.html" target="inform">企业备案查询</a></li>
+					<li><a href="sub/CompanyReference.html" target="inform">企业备案查询</a></li>
 					</ul>
 				</li>
 				<li id="l1">
 					<div class="link" onclick="change(1)"><i class="fa fa-table"></i>报表管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u1">
-					<li><a href="AuditReport.html" target="inform">审核报表</a></li>
-					<li><a href="DataGather.html" target="inform">数据汇总</a></li>
+					<li><a href="sub/AuditReport.html" target="inform">审核报表</a></li>
+					<li><a href="sub/DataGather.html" target="inform">数据汇总</a></li>
 					</ul>
 				</li>
 				<li id="l2">
 					<div class="link" onclick="change(2)"><i class="fa fa-bar-chart"></i>数据分析<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u2">
-					<li><a href="sampling.html" target="inform">取样分析</a></li>
-					<li><a href="compare.html" target="inform">对比分析</a></li>
-					<li><a href="trend.html" target="inform">趋势分析</a></li>
+					<li><a href="sub/sampling.html" target="inform">取样分析</a></li>
+					<li><a href="sub/compare.html" target="inform">对比分析</a></li>
+					<li><a href="sub/trend.html" target="inform">趋势分析</a></li>
 					</ul>
 				</li>
 				<li id="l3">
 					<div class="link" onclick="change(3)"><i class="fa fa-bell-o"></i>通知管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u3">
-					<li><a href="notice.html" target="inform">查看通知</a></li>
-					<li><a href="PublishNotice.html" target="inform">发布通知</a></li>
+					<li><a href="sub/notice.html" target="inform">查看通知</a></li>
+					<li><a href="sub/PublishNotice.html" target="inform">发布通知</a></li>
 					</ul>
 				</li>
 				<li id="l4">
 					<div class="link" onclick="change(4)"><i class="fa fa-cogs"></i>系统管理<i class="fa fa-chevron-down"></i></div>
 					<ul class="submenu" id="u4">
-					<li><a href="SubmitTime.html" target="inform">上报时限</a></li>
-					<li><a href="UserManage.html" target="inform">用户管理</a></li>
-					<li><a href="CharcatorManage.html" target="inform">角色管理</a></li>
-					<li><a href="SystemMonitoring.html" target="inform">系统监控</a></li>
+					<li><a href="sub/SubmitTime.html" target="inform">上报时限</a></li>
+					<li><a href="sub/UserManage.html" target="inform">用户管理</a></li>
+					<li><a href="sub/CharcatorManage.html" target="inform">角色管理</a></li>
+					<li><a href="sub/SystemMonitoring.html" target="inform">系统监控</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -81,7 +81,7 @@
 	</div>
 	
 	<div id="mainbody">
-		<iframe id="main" src="cover.html" width="100%" height="100%" frameborder="0" name="inform" align="right"></iframe>
+		<iframe id="main" src="sub/cover.html" width="100%" height="100%" frameborder="0" name="inform" align="right"></iframe>
 	</div>
 	
 	<!--
